HTTP通信にHttpClientを使うように変更